@@ -23,6 +23,7 @@ import mobac.mapsources.impl.MiscMapSources.YahooMapsJapan;
 import mobac.mapsources.impl.MiscMapSources.YandexMap;
 import mobac.mapsources.impl.MiscMapSources.YandexSat;
 import mobac.mapsources.impl.OsmMapSources.CycleMap;
+import mobac.mapsources.impl.OsmMapSources.Hikebikemap;
 import mobac.mapsources.impl.OsmMapSources.Mapnik;
 import mobac.mapsources.impl.OsmMapSources.OpenPisteMap;
 import mobac.mapsources.impl.OsmMapSources.OsmHikingMap;
@@ -78,9 +79,9 @@ public class DefaultMapSourcesManager extends MapSourcesManager {
 				new GoogleMaps(), new GoogleMapMaker(), new GoogleMapsChina(), new GoogleMapsKorea(),
 				new GoogleEarth(), new GoogleHybrid(), new GoogleTerrain(), new YahooMaps(), new YahooMapsJapan(),
 				DEFAULT, new TilesAtHome(), new CycleMap(), new OsmHikingMap(), new OsmHikingMapWithBase(),
-				new OsmHikingMapWithRelief(), new OsmPublicTransport(), new OpenPisteMap(), new MicrosoftMaps(),
-				new MicrosoftMapsChina(), new MicrosoftVirtualEarth(), new MicrosoftHybrid(), new OviMaps(),
-				new OutdooractiveGermany(), new OutdooractiveAustria(), new OutdooractiveSouthTyrol(),
+				new OsmHikingMapWithRelief(), new Hikebikemap(), new OsmPublicTransport(), new OpenPisteMap(),
+				new MicrosoftMaps(), new MicrosoftMapsChina(), new MicrosoftVirtualEarth(), new MicrosoftHybrid(),
+				new OviMaps(), new OutdooractiveGermany(), new OutdooractiveAustria(), new OutdooractiveSouthTyrol(),
 				new MultimapCom(), new MultimapOSUkCom(), new Cykloatlas(), new CykloatlasWithRelief(),
 				new TerraserverUSA(), new MyTopo(), new UmpWawPl(), new DoCeluPL(), new EmapiPl(), new Bergfex(),
 				new FreemapSlovakia(), new FreemapSlovakiaHiking(), new FreemapSlovakiaHikingHillShade(),
